Bundle mitmproxy with the release.

--- a/sea-config.json
+++ b/sea-config.json
@@ -1,5 +1,5 @@
 {
-    "main": "out/server-bundle.js",
+    "main": "target/server-bundle.js",
     "output": "target/sea.blob",
     "disableExperimentalSEAWarning": true
 }
